--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -9,16 +9,25 @@
     <div class="login-container shadow p-4 rounded-3 text-center">
         <h2 class="fw-bold text-primary mb-3">Bem-vindo</h2>
         <p class="text-muted mb-4">Faça login para acessar sua conta</p>
+        {% if messages %}
+    <div class="alert alert-danger">
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+{% endif %}
+
     
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="form-group text-start mb-3">
                 <label for="cpf" class="form-label fw-bold">CPF</label>
-                <input type="text" id="cpf" class="form-control" placeholder="000.000.000-00" required>
+                <input type="text" id="cpf" name="cpf" class="form-control" placeholder="000.000.000-00" required>
             </div>
 
             <div class="form-group text-start mb-2">
                 <label for="senha" class="form-label fw-bold">Senha</label>
-                <input type="password" id="senha" class="form-control" placeholder="Digite sua senha" required>
+                <input type="password" id="senha" name="password" class="form-control" placeholder="Digite sua senha" required>
             </div>
     
             <a href="#" class="d-block text-end text-primary text-decoration-none mb-4">Esqueceu sua senha?</a>
