feat: Implementa recuperação de senha e melhorias na autenticação

--- a/authentication/templates/authentication/register.html
+++ b/authentication/templates/authentication/register.html
@@ -22,10 +22,10 @@
 
         <div class="row mb-3">
             <div class="col-md-6 text-start">
-                <label for="{{ form.first_name.id_for_label }}" class="form-label fw-bold">Nome</label>
+                <label for="{{ form.first_name.id_for_label }}" class="form-label fw-bold">Nome Completo</label>
                 {{ form.first_name }}
             </div>
-            <div class="col-md-6 text-start">
+                <div class="col-md-6 text-start">
                 <label for="{{ form.last_name.id_for_label }}" class="form-label fw-bold">Sobrenome</label>
                 {{ form.last_name }}
             </div>
