--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
             <div class="form-group text-start mb-3">
                 <label for="cpf" class="form-label fw-bold">CPF</label>
-                <input type="text" id="cpf" name="cpf" class="form-control" placeholder="000.000.000-00" required>
+                <input type="text" id="cpf" name="cpf" class="form-control" placeholder="CPF/CNPJ" required>
             </div>
 
             <div class="form-group text-start mb-2">
@@ -34,7 +34,7 @@
              <a href="{% url 'password_reset' %}" class="d-block text-end text-primary text-decoration-none mb-4">Esqueceu sua senha?</a>
             <button type="submit" class="btn btn-primary w-100 fw-bold p-2">Entrar</button>
         </form>
-    
+        
         <div class="register mt-4 text-muted">
             Não tem uma conta? <a href="{% url 'register' %}" class="text-primary fw-bold text-decoration-none">Registrar</a>
         </div>
